--- a/index.html
+++ b/index.html
@@ -1,32 +1,6 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
-  <head>
-    <title>MyHtml.html</title>
-	
-    <meta name="keywords" content="keyword1,keyword2,keyword3">
-    <meta name="description" content="this is my page">
-    <meta name="content-type" content="text/html; charset=utf-8">
-    
-    <link rel="stylesheet" type="text/css" href="myself.css">
-    <script type="text/javascript" src="js/js.js"></script>
-    <script src="/js/jquery-3.1.0.min.js"></script>
-  </head>
-  
-  <body>
-    <div class="heade">
-      <img alt="first" src="image/first.jpg" class="photo">
-      <img alt="first" src="image/five.jpg" class="photo">
-      <img alt="first" src="image/four.jpg" class="photo">
-      <img alt="first" src="image/second.jpg" class="photo">
-      <ul>
-        <li>.</li>
-        <li>.</li>
-        <li>.</li>
-        <li>.</li>
-      </ul>
-      <span></span>
-      <strong>图片</strong>
-    </div>
-    <div class="this"></div>
-  </body>
+<body>
+<h1>这是我使用github pages搭建的个人站点。</h1>
+</body>
 </html>
